--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> 404 Page not found &middot; My New Hugo Site </title>
+  <title> 404 Page not found &middot; leo.zhong </title>
 
   
   <link rel="stylesheet" href="http://lzdragonix.github.io/css/poole.css">
@@ -21,7 +21,7 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="http://lzdragonix.github.io/index.xml" rel="alternate" type="application/rss+xml" title="My New Hugo Site" />
+  <link href="http://lzdragonix.github.io/index.xml" rel="alternate" type="application/rss+xml" title="leo.zhong" />
 </head>
 
 <body class="">
@@ -29,7 +29,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://lzdragonix.github.io/"><h1>My New Hugo Site</h1></a>
+      <a href="http://lzdragonix.github.io/"><h1>leo.zhong</h1></a>
       <p class="lead">
       An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.
       </p>
