--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> Leo &middot; Leo </title>
+  <title> Leo </title>
 
   
   <link rel="stylesheet" href="http://lzdragonix.github.io/css/poole.css">
